<resources>
    <string name="app_name">ShoeStore</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="welcome_to_the_shoe_store">Welcome to the Shoe Store.</string>
    <string name="click_to_continue">Click to continue.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="instructions">Instructions</string>
    <string name="go_to_store">Go to store</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="enter_description">Enter Description</string>
    <string name="description">Description</string>
    <string name="enter_shoe_size">Enter Shoe Size</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="enter_company_name">Enter Company name</string>
    <string name="company">Company</string>
    <string name="enter_shoe_name">Enter shoe name</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="add_shoe_button">Add Shoe Button</string>
    <string name="welcome_instructions_1">On the next screen you will see the list of shoes. You can add a show using the plus button at the bottom.</string>
    <string name="welcome_instructions_2">Please click below to continue.</string>
    <string name="logout">Logout</string>
</resources>
